--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "dependencies": {
     "@google-cloud/vision": "^3.0.1",
     "@supabase/supabase-js": "^2.1.1",
+    "base64-arraybuffer": "^1.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "supabase": "^1.17.4"
   }
 }
