--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@google-cloud/vision": "^3.0.1",
     "@supabase/supabase-js": "^2.1.1",
     "base64-arraybuffer": "^1.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
