--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
   },
