--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "positive-doodle-api",
+  "version": "1.0.0",
+  "description": "Node Express API for positive doodles",
+  "author": "Nick Nguyen",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "@google-cloud/vision": "^3.0.1",
     "@supabase/supabase-js": "^2.1.1",
