--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   "dependencies": {
     "@google-cloud/vision": "^3.0.1",
     "@supabase/supabase-js": "^2.1.1",
-    "base64-arraybuffer": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7"
   },
   "devDependencies": {
-    "supabase": "^1.17.4"
+    "axios": "^1.2.2",
+    "supabase": "^1.17.4",
+    "tumblr.js": "^3.0.0",
+    "base64-arraybuffer": "^1.0.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
