--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "express-rate-limit": "^6.7.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.16",
     "axios": "^1.2.2",
-    "supabase": "^1.17.4",
-    "tumblr.js": "^3.0.0",
     "base64-arraybuffer": "^1.0.2",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "supabase": "^1.17.4",
+    "ts-node": "^10.9.1",
+    "tsc": "^2.0.4",
+    "tumblr.js": "^3.0.0",
+    "typescript": "^4.9.5"
   }
 }
