--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "name": "positive-doodle-api",
     "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
+      { "src": "index.ts", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/index.js" }
