--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
       { "src": "index.ts", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.js" }
+      { "src": "/(.*)", "dest": "/index.ts" }
     ]
   }
