--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Nick Nguyen",
   "main": "index.js",
   "scripts": {
-    "start": "vercel dev -l 3070"
+    "start": "vercel dev -l 3070",
+    "dev": "HTTPS=true NODE_ENV=development ts-node-dev --inspect --respawn index.ts"
   },
   "dependencies": {
     "@google-cloud/vision": "^3.0.1",
@@ -13,17 +14,20 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0"
+    "express-rate-limit": "^6.7.0",
+    "memory-cache": "^0.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/memory-cache": "^0.2.2",
     "axios": "^1.2.2",
     "base64-arraybuffer": "^1.0.2",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "supabase": "^1.17.4",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
     "tumblr.js": "^3.0.0",
     "typescript": "^4.9.5"
