--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "start": "vercel dev -l 3070",
-    "dev": "HTTPS=true NODE_ENV=development ts-node-dev --inspect --respawn index.ts"
+    "dev": "HTTPS=true NODE_ENV=development ts-node-dev --inspect --respawn server.ts",
+    "test": "jest --runInBand --detectOpenHandles --forceExit",
+    "test:watch": "jest --runInBand --detectOpenHandles --forceExit --watchAll"
   },
   "dependencies": {
     "@google-cloud/vision": "^3.0.1",
@@ -20,16 +22,21 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
+    "@types/jest": "^29.4.0",
     "@types/memory-cache": "^0.2.2",
     "@types/pngjs": "^6.0.1",
     "@types/sharp": "^0.31.1",
+    "@types/supertest": "^2.0.12",
     "axios": "^1.2.2",
     "base64-arraybuffer": "^1.0.2",
     "fs": "^0.0.1-security",
+    "jest": "^29.4.3",
     "path": "^0.12.7",
     "pngjs": "^6.0.0",
     "sharp": "^0.31.3",
     "supabase": "^1.17.4",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "tsc": "^2.0.4",
